--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -1,3 +1,111 @@
-
 @import "themes/custom/_variables.less";
 @import "themes/custom/_overrides.less";
+
+@font-family-sans-serif: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+
+@gray: #4d4d4d;
+@clouds: #ecf0f1;
+@blue-light: #6fc8ea;
+
+body {
+  font-family: @font-family-sans-serif;
+}
+
+header {
+  .container-fluid {
+    height: 100%;
+  }
+  .row {
+    height: 100%;
+    .col-md-4 {
+      height: 100%;
+      background: @gray;
+      h2 {
+        color: @blue-light;
+        font-weight: 100;
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+      .glyphicon {
+        margin-right: 2%;
+      }
+    }
+    .col-md-8 {
+      height: 100%;
+      background: @clouds;
+      padding-left: 2%;
+      &:nth-child(2n+2) {
+        border-right: 1px solid @gray;
+      }
+      h5 {
+        display: inline-block;
+        margin-top: 15px;
+        margin-bottom: 0px;
+        margin-right: 4%;
+        &:hover {
+          cursor: pointer;
+          color: @blue-light;
+        }
+      }
+    }
+  }
+  height: 50px;
+  border-bottom: 2px solid @blue-light;
+}
+
+.container-fluid {
+  .row {
+    &:nth-child(2) {
+      margin-top: 20%;
+
+      .col-md-2 {
+        .transition-ease(180ms);
+        text-align: center;
+        border: 2px solid #EFEFEF;
+        line-height: 4em;
+        h2, h5 {
+          color: #888;
+          font-weight: 300;
+          margin-top: 10px;
+        }
+        .glyphicon.glyphicon-plus {
+          .transition-ease(180ms);
+          display: block;
+          color: #888;
+          font-size: 6em;
+          top: 0px;
+          padding-top: 8px;
+          padding-left: 8px;
+          padding-bottom: 5px;
+        }
+        &:hover {
+          .transition-ease(180ms);
+          border: 2px solid @blue-light;
+          a {
+            text-decoration: none;
+          }
+          .glyphicon.glyphicon-plus {
+            .transition-ease(180ms);
+            color: @blue-light;
+          }
+        }
+      }
+    }
+  }
+}
+
+.transition-ease (@time: 250ms) {
+  -webkit-transition: @time cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -moz-transition: @time cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -ms-transition: @time cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  -o-transition: @time cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+  transition: @time cubic-bezier(0.250, 0.250, 0.750, 0.750) all;
+}
+
+.transition-ease-in (@time: 400ms) {
+  -webkit-transition: @time cubic-bezier(0.420, 0.000, 1.000, 1.000) all;
+  -moz-transition: @time cubic-bezier(0.420, 0.000, 1.000, 1.000) all;
+  -ms-transition: @time cubic-bezier(0.420, 0.000, 1.000, 1.000) all;
+  -o-transition: @time cubic-bezier(0.420, 0.000, 1.000, 1.000) all;
+  transition: @time cubic-bezier(0.420, 0.000, 1.000, 1.000) all;
+}
