--- a/app/assets/partials/posts.html
+++ b/app/assets/partials/posts.html
@@ -1,26 +1,75 @@
 <header>
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-4">
-        <h2><span class='glyphicon glyphicon-comment'></span>POSTS</h2>
+  <div class='container-fluid'>
+    <div class='row'>
+      <div class='col-md-4 header-left'>
+        <h2 data-icon class='icon-advocacy'>Posts</h2>
       </div>
-      <div class="col-md-8">
-        <h5><span class='glyphicon glyphicon-cloud-upload'></span> Publish</h5>
-        <h5><span class='glyphicon glyphicon-tag'></span> Set tag</h5>
-        <h5><span class='glyphicon glyphicon-star'></span> Archive</h5>
-        <h5><span class='glyphicon glyphicon-ok'></span> Approve</h5>
-        <h5><span class='glyphicon glyphicon-remove'></span> Delete</h5>
-        <h5 class='pull-right'><span class='glyphicon glyphicon-remove-sign'></span></h5>
-        <h5 class='pull-right'><span class='glyphicon glyphicon-plus'></span></h5>
-        <h5 class='pull-right'><span class='glyphicon glyphicon-th-large'></span>
+      <div class='col-md-8 header-right'>
+        <h5 data-icon class='icon-publish pull-left'>Publish</h5>
+        <h5 data-icon class='icon-promotion pull-left'>Set tag</h5>
+        <div class="divider pull-left"></div>
+        <h5 data-icon class='icon-keep pull-left'>Archive</h5>
+        <h5 data-icon class='icon-review pull-left'>Approve</h5>
+        <div class="divider pull-left"></div>
+        <h5 data-icon class='icon-cancel pull-left'>Delete</h5>
+        <h5 data-icon class='icon-close pull-right'></h5>
+        <div class="divider pull-right"></div>
+        <h5 data-icon class='icon-plus pull-right'></h5>
+        <h5 data-icon class='icon-layout pull-right'></h5>
       </div>
     </div>
   </div>
 </header>
 
-<div class="container-fluid">
-  <aside class="col-md-4"></aside>
-  <section class="col-md-8">
-
+<div class='posts'>
+  <aside class='col-md-4'>
+    <ul class='list-group'>
+      <li class='list-group-item'>
+        <h5>SOCIAL NETWORK</h5>
+        <h3 data-icon class="icon-twitter"></h3>
+        <h3 data-icon class="icon-facebook"></h3>
+      </li>
+      <li class='list-group-item'>
+        <h5>STATUS</h5>
+        <!-- <p class='pull-left'>Scheduled</p>
+        <p data-icon class='icon-down pull-right'></p> -->
+      </li>
+      <li class='list-group-item'>
+        <h5>TIME RANGE</h5>
+      </li>
+      <li class='list-group-item'>
+        <h5>TAG FILTER</h5>
+        <h2 class='tag-filter'>[Tag]</h2>
+      </li>
+      <li class='list-group-item'>
+        <h5>FILTERS</h5>
+        <p>
+          All<br>
+          Pending Review<br>
+          Ready & Approved<br>
+          Scheduled<br>
+          Published<br>
+          Embargoed
+        </p>
+      </li>
+    </ul>
+  </aside>
+  <section class='col-md-8'>
+    <ul class='col-md-12 list-group'>
+      <li class='list-group-item' ng-repeat='post in posts'>
+        <div class="media pull-left">
+          <div class="media-body">
+            <div class="media-heading">{{post.content.title}}</div>
+          </div>
+        </div>
+        <!-- <p class='pull-left'>{{post.title}}</p> -->
+        <div class='btn-group pull-right'>
+          <a ng-href='#/conversations/posts/{{post.id}}/edit' data-icon class='icon-settings'></a>
+          <a ng-href='#' data-icon class='icon-promotion'></a>
+          <a ng-href='#' data-icon class='icon-publish'></a>
+          <a ng-href='#' data-icon class='icon-down'></a>
+        </div>
+      </li>
+    </ul>
   </section>
 </div>
